Fixed width of notSignedInPage input so they dont break out of container

--- a/src/App.css
+++ b/src/App.css
@@ -1065,6 +1065,7 @@ textarea {
   border-radius: 5px;
   margin-bottom: 10px;
   padding: 5px 10px;
+  width: 100%;
 }
 
 @media (max-width: 650px) {
